added search and main before error message

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,18 +1,38 @@
+<!DOCTYPE>
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>
-    Title for this Page Goes Here
-  </title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-  
-  
+	<title> CoMusic </title>
+	 <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8"> 
+
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
-
-
+<div class="container-fluid "> 
+<h1> <b> CoMuisc </b> </h1>
+<h3> Different though. Different sound. Different music. </h3>
+</div>
+<h4>Sign in</h4>
+<form>
+<input type="email" name="email" placeholder="Email">
+<input type="password" name="password" placeholder="Password">
+<br>
+<input type="submit" value="Submit">
+</form>
+<p>We are the team of CoMusic proud to present our webside to you.<br>
+CoMusic it is the new way to get people from other nationallty get know each other and to pass meaningful experiences<br>
+Our goal
+</p>
 </body>
-
-
 </html>
