--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -24,15 +24,21 @@
 <h3> Different though. Different sound. Different music. </h3>
 </div>
 <h4>Sign in</h4>
-<form>
-<input type="email" name="email" placeholder="Email">
-<input type="password" name="password" placeholder="Password">
-<br>
-<input type="submit" value="Submit">
-</form>
-<p>We are the team of CoMusic proud to present our webside to you.<br>
+<form action="{{ url_for('main_page.html') }}" method="POST">
+<div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Email">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Password">
+    </div>
+    <input type="submit" name="Submit">
+  </form>
+</div>
+
+<p style="color: red; font-size: 20px"> We are the team of CoMusic proud to present our webside to you.<br>
 CoMusic it is the new way to get people from other nationallty get know each other and to pass meaningful experiences<br>
-Our goal
-</p>
+Our goal</p>
 </body>
 </html>
