--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,14 @@
  <!DOCTYPE html>
 <html>
 	<head>
-		<title> Home page </title>
+		<title> Search </title>
 	</head>
 	<body>
-	<form action="search.html" method="POST">
-	<input type="search" name="search" placeholder="Search">
-	<input type="submit" value="Submit">
+	<form action="{{ url_for('search') }}" method="POST">
+	<div class="form-group">
+      <input type="text" class="form-control" name="instrument" id="search">
+    </div>
+    <input type="submit" value="Search">
+  </form>
 	</body>
 </html> 
