--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -28,7 +28,7 @@
 </div>
 <h4>Sign in</h4>
 
-<form action="{{ url_for('main_page.html') }}" method="POST">
+<form action="{{ url_for('main') }}" method="POST">
 <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" class="form-control" id="email" placeholder="Email">
