--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -17,6 +17,7 @@ scale=1.0”>
 <meta    charset="utf-­‐8">        
 
 
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='grayscale.css')}}">
 <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='sign_up.css')}}">
 
 	<title>Sign Up</title>
