--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -22,27 +22,56 @@
 <h1>Bad Login, Try again !</h1>
 {%endif%}
 
-<div class="container-fluid "> 
-<h1> <b> CoMuisc </b> </h1>
-<h3> Different though. Different sound. Different music. </h3>
-</div>
-<h4>Sign in</h4>
+ <div class="container-fluid"><div class="row"><div class="col-md-offset-3 col-md-4"><div class="container-fluid "> 
+<h1> <b> CoMusic </b> </h1>
+<h3> Different Thought. Different Sound. Same Music. </h3>
+<a href="{{ url_for('sign_up') }}" class="btn btn-lg btn-primary btn-block">Sign Up</a>
 
-<form action="{{ url_for('main') }}" method="POST">
-<div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Email">
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Password">
-    </div>
-    <input type="submit" name="Submit">
-  </form>
-</div>
 
-<p>We are the team of CoMusic proud to present our webside to you.<br>
+<h4>Sign in</h4></div></div></div></div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-4">
+		<form action="{{ url_for('main') }}" method="POST">
+			<div class="form-group">
+			      <label for="email">Email:</label>
+			      <input type="email" class="form-control" id="email" placeholder="Email">
+			    </div>
+			    <div class="form-group">
+			      <label for="pwd">Password:</label>
+			      <input type="password" class="form-control" id="pwd" placeholder="Password">
+			    </div>
+
+			    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block">
+			  </form>
+			  <br>
+			  <p>don't have an account? sign up here for free!</p>
+		</div>
+	</div>
+</div>
+<!-- <div class="container">
+
+      <form class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+
+    </div> /container -->
+
+
+
+<div class="container-fluid"><div class="row"><div class="col-md-offset-3 col-md-4"><p>We are the team of CoMusic proud to present our webside to you.<br>
 CoMusic it is the new way to get people from other nationallty get know each other and to pass meaningful experiences<br>
-Our goal</p>
+Our goal</p></div></div></div>
 </body>
 </html>
