--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -14,10 +14,10 @@
 <meta name=“viewport” content=“width= device-width, initial 
 scale=1.0”> 
 
-<meta    charset="utf-­‐8">        
+<meta charset="utf-­‐8">        
 
 
-<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='grayscale.css')}}">
+<!--<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='grayscale.css')}}"> -->
 <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='sign_up.css')}}">
 
 	<title>Sign Up</title>
@@ -27,68 +27,94 @@ scale=1.0”>
 <body>
 
 
-<div class="container-fluid"><div class="row"><div class="col-md-offset-3 col-md-3"><h1>Sign up here</h1></div></div></div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>CoMusic</h1>
+    </div>
+    <div class="col-md-offset-7 col-md-1">
+    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block" id="loginbtn">
+  </div>
+</div>
 <hr>
 
-<div class="container-fluid"><div class="row"><div class="col-md-offset-3 col-md-2"><form>
+<form>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-offset-3 col-md-2">
+      <br>
 
-<br>
-<input type="text" name="name" placeholder="Name">
-<br>
-<h3>Gender</h3>
-<input type="radio" name="gender" value="male">Male
-<input type="radio" name="gender" value="female">Female
-<br>
-<h3>Nationality</h3>
-<input type="radio" name="nationality" value="israeli">Israeli
-<input type="radio" name="nationality" value="palestinian">Palestinian
-<br>
-<br>
-<input type="text" name="email" placeholder="E-mail">
-<br>
-<div><input type="password" name="password" placeholder="password"></div>
-<div><input type="password" name="password" placeholder="confirm password"></div>
+      <input type="text" name="name" placeholder="Name">
+      <br>
+      <h3>Gender</h3>
+      <input type="radio" name="gender" value="male">Male
+      <input type="radio" name="gender" value="female">Female
+      <br>
+      <h3>Nationality</h3>
+      <input type="radio" name="nationality" value="israeli">Israeli
+      <input type="radio" name="nationality" value="palestinian">Palestinian
+      <br>
+      <br>
+      <input type="text" name="email" placeholder="E-mail">
+      <br>
+      <div>
+        <input type="password" name="password" placeholder="password">
+      </div>
+      <div>
+        <input type="password" name="password" placeholder="confirm password">
+      </div>
+    </div>
 
-<h3>Instrument</h3>
-<div><input type="checkbox" name="instrument" value="guitar">guitar</div>
-<div><input type="checkbox" name="instrument" value="piano">piano</div>
-<div><input type="checkbox" name="instrument" value="violin">violin</div>
-<div><input type="checkbox" name="instrument" value="chelo">chelo</div>
-<div><input type="checkbox" name="instrument" value="voice">voice</div>
-<div><input type="checkbox" name="instrument" value="drums">drums</div>
-<div><input type="text" name="instrument" placeholder="other">
-<br>
-<br>
-<div><input type="text" name="city" placeholder="city"></div>
-<div><input type="text" name="phone number" placholder="phone number"></div>
-<div><input type="text" name="tv show" placeholder="favorite TV show"></div>
+    <div class="col-md-offset-1 col-md-2">
+      <h3>Instrument</h3>
+      <div><input type="checkbox" name="instrument" value="guitar">guitar</div>
+      <div><input type="checkbox" name="instrument" value="piano">piano</div>
+      <div><input type="checkbox" name="instrument" value="violin">violin</div>
+      <div><input type="checkbox" name="instrument" value="chelo">cello</div>
+      <div><input type="checkbox" name="instrument" value="voice">voice</div>
+      <div><input type="checkbox" name="instrument" value="drums">drums</div>
+      <div><input type="text" name="instrument" placeholder="other"></div>
+      <br>
+      <br>
+      <div><input type="text" name="city" placeholder="city"></div>
+      <div><input type="text" name="phone number" placholder="phone number"></div>
+      <div><input type="text" name="tv show" placeholder="favorite TV show"></div>
 
-<div class="form-group" style="float: left;">
-	<select name="day">
-		{% for day in days %}
-		<option value="{{ day }}">{{ day }}</option>
-		{% endfor %}
-	</select>
-</div>
+      <div class="form-group" style="float: left;">
+	    <select name="day">
+		  {% for day in days %}
+		  <option value="{{ day }}">{{ day }}</option>
+		  {% endfor %}
+	    </select>
+      </div>
 
-<div class="form-group" style="float: left;">
-	<select name="month">
-		{% for month in months %}
-		<option value="{{ month }}">{{ month }}</option>
-		{% endfor %}
+      <div class="form-group" style="float: left;">
+	    <select name="month">
+		  {% for month in months %}
+		  <option value="{{ month }}">{{ month }}</option>
+		  {% endfor %}
 		</select>
-</div>
+      </div>
 
+      <div class="form-group">
+	    <select name="year">
+		  {% for year in years %}
+		  <option value="{{ year }}">{{ year }}</option>
+		  {% endfor %}
+	  </select>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="form-group">
-	<select name="year">
-		{% for year in years %}
-		<option value="{{ year }}">{{ year }}</option>
-		{% endfor %}
-	</select>
+	<div class="col-md-offset-4 col-md-2">
+	  <input type="submit" name="Submit" value="Submit" class="btn btn-lg btn-primary btn-block">
+  	</div>  
 </div>
 
-</form></div></div></div>
+</form>
+
 
 
 
