Tal changed image name

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -83,7 +83,7 @@ Our goal is to start giving people a way to communicate with passion.</p>
 </p>
 </div>
 
-<img src="pic.jpg" alt="logo" height="140px" width="140px">
+<img src="{{ url_for('static',filename='pic.jpeg')}}" alt="logo" height="140px" width="140px">
 
 </body>
 </html>
