--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -35,11 +35,11 @@
 		<form action="{{ url_for('main') }}" method="POST">
 			<div class="form-group">
 			      <label for="email">Email:</label>
-			      <input type="email" class="form-control" id="email" placeholder="Email">
+			      <input type="email" class="form-control" name="email" id="email" placeholder="Email">
 			    </div>
 			    <div class="form-group">
 			      <label for="pwd">Password:</label>
-			      <input type="password" class="form-control" id="pwd" placeholder="Password">
+			      <input type="password" class="form-control" name="password" id="pwd" placeholder="Password">
 			    </div>
 
 			    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block">
