small thing person yaniv

--- a/templates/search.html
+++ b/templates/search.html
@@ -45,7 +45,7 @@
       <td>{{ person.gender }}</td>
       <td>{{ person.nationality }}</td>
       <td>{{ person.city }}</td>
-      <td>{{ person.dob.day }}/{{ perosn.dob.month }}/{{ person.dob.year }} </td>
+      <td>{{ person.dob.day }}/{{ person.dob.month }}/{{ person.dob.year }} </td>
       <td>{{ person.tv_show }}</td>
       <td><a href="{{ url_for('compare',person_id=person.id) }}">Compare</a></td>
     </tr>
