--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -24,11 +24,26 @@
 <h1>Bad Login, Try again !</h1>
 {%endif%}
 
- <div class="container-fluid"><div class="row"><div class="col-md-offset-3 col-md-4"><div class="container-fluid "> 
-<h1> <b> CoMusic </b> </h1>
-<h3> Different Thought. Different Sound. Same Music. </h3>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-4">
+			<h1> <b> CoMusic </b> </h1>
+			<h3> Different Thought.<br> Different Sound.<br> Same Music.</h3>
+		</div>
+		<div id="papa">
+			<div class="col-md-offset-1 col-md-1">
+				<img src="{{ url_for('static',filename='logo.png')}}" alt="logo" height="140px" width="140px">
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-offset-3 col-md-4">
 
-<h3>Sign in</h3></div></div></div></div>
+		<h3>Sign in</h3>
+	</div>
+</div>
+
+
 
 <div class="container-fluid" id="tal">
 	<div class="row">
@@ -64,7 +79,5 @@
 		</div>
 	</div>
 </div>
-
-<img src="{{ url_for('static',filename='pic.jpeg')}}" alt="logo" height="140px" width="140px">
 </body>
 </html>
