--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -32,11 +32,17 @@ scale=1.0”>
     <div class="col-md-3">
       <h1>CoMusic</h1>
     </div>
-    <div class="col-md-offset-7 col-md-1">
+    <div class="col-md-offset-8 col-md-1">
     <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block" id="loginbtn">
   </div>
 </div>
 <hr>
+
+<div class="container-fluid">
+  <div class="col-md-offset-3 col-md-3">
+    <h1>sign up</h1>
+  </div>
+</div>
 
 <form>
 
@@ -108,7 +114,7 @@ scale=1.0”>
   </div>
 </div>
 <div class="form-group">
-	<div class="col-md-offset-4 col-md-2">
+	<div class="col-md-offset-4 col-md-3">
 	  <input type="submit" name="Submit" value="Submit" class="btn btn-lg btn-primary btn-block">
   	</div>  
 </div>
