--- a/static/sign_up.css
+++ b/static/sign_up.css
@@ -1,6 +1,15 @@
 #loginbtn{
-	margin-top: 20px ;
-	align-content:center;
-	text-align: 50%;
+	margin-top: 50px ;
+}
+#header-name{
+	margin-top: 40px;
+
+	
+
+}
+
+h1{
+
+	font-size: 400%;
 
 }
