--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -15,7 +15,7 @@
 	<meta charset="utf-8"> 
 
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-
+	
 
 </head>
 
@@ -44,18 +44,17 @@
 </div>
 
 
-
 <div class="container-fluid" id="tal">
 	<div class="row">
 		<div class="col-md-offset-3 col-md-4">
 			<form action="{{ url_for('main') }}" method="POST">
 				<div class="form-group">
-			       	<label for="email">Email:</label>
-			      	<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-				</div>
-			    <div class="form-group">
-			        <label for="pwd">Password:</label>
-			        <input type="password" class="form-control" name="password" id="pwd" placeholder="Password">
+			       	<label for="email"></label>
+			      	<input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email">
+				
+			    	
+			        <label for="pwd"></label>
+			        <input type="password" class="form-control input-lg" name="password" id="pwd" placeholder="Password">
 			    </div>
 			    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block">
 			</form>
