--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -17,8 +17,8 @@ scale=1.0”>
 <meta charset="utf-­‐8">        
 
 
-<!--<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='grayscale.css')}}"> -->
 <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='sign_up.css')}}">
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
 
 	<title>Sign Up</title>
 
@@ -30,10 +30,11 @@ scale=1.0”>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
-      <h1>CoMusic</h1>
+      <h1 id="header-name">CoMusic</h1>
     </div>
     <div class="col-md-offset-8 col-md-1">
-    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block" id="loginbtn">
+    <div><input type="submit" name="Submit" value="Sign In" class="btn btn-md btn-info btn-block" id="loginbtn">
+    </div>
   </div>
 </div>
 <hr>
