--- a/static/styles.css
+++ b/static/styles.css
@@ -2,3 +2,8 @@
 body{
 	background-image: url("bg.jpg"); 
 }
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+
+
+
