--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -57,7 +57,7 @@ scale=1.0”>
     <div class="col-md-offset-3 col-md-2">
       <br>
 
-      <input type="text" name="name" placeholder="Name">
+      <input class="form-control input-lg" type="text" name="name" placeholder="Name">
       <br>
       <h3>Gender</h3>
       <input type="radio" name="gender" value="male">Male
@@ -68,19 +68,19 @@ scale=1.0”>
       <input type="radio" name="nationality" value="palestinian">Palestinian
       <br>
       <br>
-      <input type="text" name="email" placeholder="E-mail">
+      <input  class="form-control input-lg"type="text" name="email" placeholder="E-mail">
       <br>
       <br>
       <div>
-        <input type="password" name="password" placeholder="password">
+        <input class="form-control input-lg" type="password" name="password" placeholder="password">
       </div>
       <br>
       <div>
-        <input type="password" name="confirm_password" placeholder="confirm password">
+        <input class="form-control input-lg" type="password" name="confirm_password" placeholder="confirm password">
       </div>
       <br>
       <div>
-        <input type="text" name="genre" placeholder="genre">
+        <input class="form-control input-lg" type="text" name="genre" placeholder="genre">
       </div>
     </div>
 
@@ -92,13 +92,13 @@ scale=1.0”>
       <div><input type="checkbox" name="instrument" value="chelo">cello</div>
       <div><input type="checkbox" name="instrument" value="voice">voice</div>
       <div><input type="checkbox" name="instrument" value="drums">drums</div>
-      <div><input type="text" name="instrument" placeholder="other"></div>
+      <div><input class="form-control input-lg" type="text" name="instrument" placeholder="other"></div>
       <br>
-      <div><input type="text" name="city" placeholder="city"></div>
+      <div><input class="form-control input-lg" class="form-control input-lg" type="text" name="city" placeholder="city"></div>
       <br>
-      <div><input type="text" name="phone" placeholder="phone number"></div>
+      <div><input class="form-control input-lg" type="text" name="phone" placeholder="phone number"></div>
       <br>
-      <div><input type="text" name="tv_show" placeholder="favorite TV show"></div>
+      <div><input class="form-control input-lg" type="text" name="tv_show" placeholder="favorite TV show"></div>
       <br>
       <div class="form-group" style="float: left;">
 	    <select name="day">
@@ -135,7 +135,15 @@ scale=1.0”>
 </form>
 
 
-
+<h1>Custom Checkboxes</h1>
+<div>
+  <input id="box1" type="checkbox" />
+  <label for="box1">Checkbox 1</label>
+  <input id="box2" type="checkbox" />
+  <label for="box2">Checkbox 2</label>
+  <input id="box3" type="checkbox" />
+  <label for="box3">Checkbox 3</label>
+</div>
 
 
 </body>
