Yaniv's working webapp

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -48,14 +48,12 @@ scale=1.0”>
   </div>
 </div>
 
-<form>
 
 <form action="{{ url_for('sign_up') }}" method="POST">
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-offset-3 col-md-2">
       <br>
-
       <input type="text" name="name" placeholder="Name">
       <br>
       <h3>Gender</h3>
@@ -97,7 +95,7 @@ scale=1.0”>
       <br>
       <div><input type="text" name="phone" placeholder="phone number"></div>
       <br>
-      <div><input type="text" name="tv_show" placeholder="favorite TV show"></div>
+      <div><input type="text" name="tv_shows" placeholder="favorite TV show"></div>
       <br>
       <div class="form-group" style="float: left;">
 	    <select name="day">
