--- a/templates/compare.html
+++ b/templates/compare.html
@@ -21,30 +21,42 @@
  		<div class="col-md-1">
  		</div>
  		<div class="col-md-4">
- 		<h3> Name = {{ user.name }} </h3>
+ 		<h3>{{ user.name }}</h3>
  		<ul>
- 		<li> Nationality: {{ user.nationality }}</li>
- 		<li> City: {{ user.city }}</li>
- 		<li> Phone Number: {{ user.phone }}</li>
- 		<li> Instrument(s): {{ user.instrument }}</li>
- 		<li> Music Genre(s): {{ user.genre }}</li>
- 		<li> Birthday: {{ user.dob.day }}/{{ user.dob.month }}/{{ user.dob.year }}</li>
- 		<li> Favorite TV Show(s): {{ user.tv_show }}</li>
+ 		<li>Nationality: {{ user.nationality }}</li>
+ 		<li>City: {{ user.city }}</li>
+ 		<li>Phone Number: {{ user.phone }}</li>
+ 		<li>Instrument(s): 
+ 		{%for instrument in user.instrument%}
+ 		{{ instrument.name }}
+ 		{%endfor%}</li>
+ 		<li>Music Genre(s): {{ user.genre }}</li>
+ 		<li>Birthday: {{ user.dob.day }}/{{ user.dob.month }}/{{ user.dob.year }}</li>
+ 		<li>Favorite TV Show(s): 
+ 		{%for interest in user.interests%}
+ 		{{ interest.name }}
+ 		{%endfor%}</li>
  		</ul>
  		
 
- 		</div>
+ 	</div>
  		<div class="col-md-2">  </div>
  		<div class="col-md-4">
- 		<h3> Name = {{ person.name }} </h3>
+ 		<h3>{{ person.name }}</h3>
  		<ul>
- 		<li> Nationality: {{ person.nationality }}</li>
- 		<li> City: {{ person.city }}</li>
- 		<li> Phone Number: {{ person.phone }}</li>
- 		<li> Instrument(s): {{ person.instrument }}</li>
- 		<li> Music Genre(s): {{ person.genre }}</li>
- 		<li> Birthday: {{ person.dob.day }}/{{ perosn.dob.month }}/{{ person.dob.year }}</li>
- 		<li> Favorite TV Show(s): {{ person.tv_show }}</li>
+ 		<li>Nationality: {{ person.nationality }}</li>
+ 		<li>City: {{ person.city }}</li>
+ 		<li>Phone Number: {{ person.phone }}</li>
+ 		<li>Instrument(s): 
+ 		{%for instrument in person.instrument%}
+ 		{{ instrument.name }}
+ 		{%endfor%}</li>
+ 		<li>Music Genre(s): {{ person.genre }}</li>
+ 		<li>Birthday: {{ person.dob.day }}/{{ person.dob.month }}/{{ person.dob.year }}</li>
+ 		<li>Favorite TV Show(s): 
+ 		{%for interest in person.interests%}
+ 		{{ interest.name }}
+ 		{%endfor%}</li>
  		</ul>
  		
 
@@ -52,27 +64,5 @@
  		<div class="col-md-1"> </div>
 
  			<div class="container-fluid ">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
