--- a/templates/search.html
+++ b/templates/search.html
@@ -49,7 +49,7 @@
       <td>{%for interest in person.interests%}
       {{ interest.name }}
       {%endfor%}</td>
-      <td><a href="{{ url_for('compare',person_id=person.id) }}">Compare</a></td>
+      <td><a href="{{ url_for('compare',person_id=person.id) }}" class="btn btn-primary" role="button">Compare</a></td>
     </tr>
     {% endfor %}
     </tbody>
