--- a/static/sign_up.css
+++ b/static/sign_up.css
@@ -1,3 +1,11 @@
+
+body{
+
+	background-image: url("bg.jpg");
+}
+
+
+
 #loginbtn{
 	margin-top: 50px ;
 }
@@ -8,21 +16,54 @@
 
 }
 
+
+
+
+
 h1{
 
 	font-size: 400%;
 
 }
-/*** custom checkboxes ***/
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
 
-input[type=checkbox] { display:none; } /* to hide the checkbox itself */
-input[type=checkbox] + label:before {
-  font-family: FontAwesome;
-  display: inline-block;
+
+
+
+
+
+
+
+
+
+
+
+
 }
 
-input[type=checkbox] + label:before { content: "\f096"; } /* unchecked icon */
-input[type=checkbox] + label:before { letter-spacing: 10px; } /* space between checkbox and label */
+.form-group input[type="checkbox"] + .btn-group > label span {
+    width: 20px;
+}
 
-input[type=checkbox]:checked + label:before { content: "\f046"; } /* checked icon */
-input[type=checkbox]:checked + label:before { letter-spacing: 5px; } /* allow space for check mark */
+.form-group input[type="checkbox"] + .btn-group > label span:first-child {
+    display: none;
+}
+.form-group input[type="checkbox"] + .btn-group > label span:last-child {
+    display: inline-block;   
+}
+
+.form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
+    display: inline-block;
+}
+.form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
+    display: none;   
+}
