--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -51,6 +51,7 @@ scale=1.0”>
 
 
 <form action="{{ url_for('sign_up') }}" method="POST">
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-offset-3 col-md-2">
@@ -58,12 +59,16 @@ scale=1.0”>
       <input class="form-control input-lg" type="text" name="name" placeholder="Name">
       <br>
       <h3>Gender</h3>
+      <div class="well well-sm text-center">
       <input type="radio" name="gender" value="male">Male
       <input type="radio" name="gender" value="female">Female
-      <br>
+      </div>
+      
       <h3>Nationality</h3>
+      <div class="well well-sm text-center">
       <input type="radio" name="nationality" value="israeli">Israeli
       <input type="radio" name="nationality" value="palestinian">Palestinian
+      </div>
       <br>
       <br>
       <input  class="form-control input-lg"type="text" name="email" placeholder="E-mail">
@@ -84,23 +89,38 @@ scale=1.0”>
 
     <div class="col-md-offset-1 col-md-2">
       <h3>Instrument</h3>
-      <div><input type="checkbox" name="instrument" value="guitar">guitar</div>
-      <div><input type="checkbox" name="instrument" value="piano">piano</div>
-      <div><input type="checkbox" name="instrument" value="violin">violin</div>
-      <div><input type="checkbox" name="instrument" value="chelo">cello</div>
-      <div><input type="checkbox" name="instrument" value="voice">voice</div>
-      <div><input type="checkbox" name="instrument" value="drums">drums</div>
+      <!--<div class="well well-sm text-center">-->
+
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="guitar">guitar</div></label>
+
+      <br>
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="piano">piano</div></label>
+      <br>
+
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="violin">violin</div></label>
+      <br>
+
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="chelo">cello</div></label>
+      <br>
+
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="voice">voice</div></label>
+      <br>
+
+      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="drums">drums</div></label>
+      <br>
+      <br>
+      <!--</div>-->
       <div><input class="form-control input-lg" type="text" name="instrument" placeholder="other"></div>
       <br>
       <div><input class="form-control input-lg" class="form-control input-lg" type="text" name="city" placeholder="city"></div>
       <br>
       <div><input class="form-control input-lg" type="text" name="phone" placeholder="phone number"></div>
       <br>
-<<<<<<< HEAD
-      <div><input type="text" name="tv_shows" placeholder="favorite TV show"></div>
-=======
+      
+
+
       <div><input class="form-control input-lg" type="text" name="tv_show" placeholder="favorite TV show"></div>
->>>>>>> 7aadbfcb6fdc164bbc35c7451052d46c4bbcee37
+
       <br>
       <div class="form-group" style="float: left;">
 	    <select name="day">
@@ -128,24 +148,34 @@ scale=1.0”>
     </div>
   </div>
 </div>
+
+<br>
+<br>
 <div class="form-group">
 	<div class="col-md-offset-4 col-md-3">
 	  <input type="submit" name="Submit" value="Submit" class="btn btn-lg btn-primary btn-block">
   	</div>  
 </div>
 
+
 </form>
 
 
-<h1>Custom Checkboxes</h1>
-<div>
-  <input id="box1" type="checkbox" />
-  <label for="box1">Checkbox 1</label>
-  <input id="box2" type="checkbox" />
-  <label for="box2">Checkbox 2</label>
-  <input id="box3" type="checkbox" />
-  <label for="box3">Checkbox 3</label>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
