--- a/templates/search.html
+++ b/templates/search.html
@@ -18,9 +18,18 @@
 	<body>
 	<form action="{{ url_for('search') }}">
 	<div class="form-group">
+      <br>
+      <br>
+      <br>
+      <hr>
+      <div class="col-md-offset-3 col-md-6">
       <input type="text" class="form-control" name="instrument" id="search">
+      <br>
     </div>
-    <input type="submit" value="Search">
+  </div>
+  <div class="col-md-offset-4 col-md-4">
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Search">
+  </div>
   </form>
   {%if error%}
   <h1>No results, try again !</h1>
