--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -54,21 +54,24 @@ scale=1.0”>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-3 col-md-2">
+    <div class="col-md-offset-3 col-md-3">
       <br>
       <input class="form-control input-lg" type="text" name="name" placeholder="Name">
       <br>
       <h3>Gender</h3>
+      <div class="col-md-6">
       <div class="well well-sm text-center">
       <input type="radio" name="gender" value="male">Male
+      <br>
       <input type="radio" name="gender" value="female">Female
       </div>
       
       <h3>Nationality</h3>
       <div class="well well-sm text-center">
       <input type="radio" name="nationality" value="israeli">Israeli
+      <br>
       <input type="radio" name="nationality" value="palestinian">Palestinian
-      </div>
+      </div></div>
       <br>
       <br>
       <input  class="form-control input-lg"type="text" name="email" placeholder="E-mail">
