--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -54,7 +54,7 @@ scale=1.0”>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-offset-3 col-md-3">
+    <div class="col-md-offset-2 col-md-3">
       <br>
       <input class="form-control input-lg" type="text" name="name" placeholder="Name">
       <br>
@@ -90,29 +90,29 @@ scale=1.0”>
       </div>
     </div>
 
-    <div class="col-md-offset-1 col-md-2">
+    <div class="col-md-offset-1 col-md-3">
       <h3>Instrument</h3>
       <!--<div class="well well-sm text-center">-->
-
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="guitar">guitar</div></label>
+      <div class="col-md-5">
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="guitar">guitar</div></label>
 
       <br>
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="piano">piano</div></label>
-      <br>
-
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="violin">violin</div></label>
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="piano">piano</div></label>
       <br>
 
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="chelo">cello</div></label>
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="violin">violin</div></label>
       <br>
 
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="voice">voice</div></label>
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="chelo">cello</div></label>
       <br>
 
-      <label class="btn btn-primary" ><div><input type="checkbox" name="instrument" value="drums">drums</div></label>
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="voice">voice</div></label>
+      <br>
+
+      <label class="btn btn-primary" ><div class="col-md-3"><input type="checkbox" name="instrument" value="drums">drums</div></label>
       <br>
       <br>
-      <!--</div>-->
+      </div>
       <div><input class="form-control input-lg" type="text" name="instrument" placeholder="other"></div>
       <br>
       <div><input class="form-control input-lg" class="form-control input-lg" type="text" name="city" placeholder="city"></div>
@@ -159,7 +159,9 @@ scale=1.0”>
 	  <input type="submit" name="Submit" value="Submit" class="btn btn-lg btn-primary btn-block">
   	</div>  
 </div>
-
+<br>
+<br>
+<br>
 
 </form>
 
