--- a/templates/search.html
+++ b/templates/search.html
@@ -22,13 +22,14 @@
       <br>
       <br>
       <hr>
-      <div class="col-md-offset-3 col-md-6">
-      <input type="text" class="form-control" name="instrument" id="search">
+      <div class="col-md-offset-2 col-md-6">
+      <input type="text" class="form-control input-lg" name="instrument" id="search" placeholder="Search">
+
+  <div class="col-md-offset-1 col-md-3">
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Search">
+  </div>
       <br>
     </div>
-  </div>
-  <div class="col-md-offset-4 col-md-4">
-    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Search">
   </div>
   </form>
   {%if error%}
