--- a/templates/compare.html
+++ b/templates/compare.html
@@ -4,6 +4,7 @@
 	<title>CoMusic</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -11,11 +12,39 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8"> 
+    <meta charset="utf-8"> 
 
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+	<!--<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">-->
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='yaniv.css') }}">
+
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+<nav class="navbar navbar-default" style="margin-bottom: 0px;">
+    <div class="container-fluid">
+      	<div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          	<span class="sr-only">Toggle navigation</span>
+          	<span class="icon-bar"></span>
+          	<span class="icon-bar"></span>
+          	<span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ url_for('main') }}">CoMusic</a>
+      	</div>
+      	<div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              	<li><a href="{{ url_for('main') }}">Home</a></li>
+              	<li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>
+              	<li><a href="{{ url_for('search') }}">Search</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+				<li><img src="{{ url_for('static',filename='logo.png')}}" alt="logo" height="50px" width="50px" style=""></li>          
+			</ul>
+      	</div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+</nav>
+
  <div class="container-fluid">
  	<div class="row">
  		<div class="col-md-1">
