--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> CoMusic </title>
+	<title>CoMusic</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -16,79 +16,79 @@
     <meta charset="utf-8"> 
 
 	<!--<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">-->
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='yaniv.css') }}">
+
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
+<body>
 
-<nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
+<nav class="navbar navbar-default" style="margin-bottom: 0px;">
+    <div class="container-fluid">
+      	<div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+          	<span class="sr-only">Toggle navigation</span>
+          	<span class="icon-bar"></span>
+          	<span class="icon-bar"></span>
+          	<span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CoMusic</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
+            <a class="navbar-brand" href="{{ url_for('main') }}">CoMusic</a>
+      	</div>
+      	<div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              	<li class="active"><a href="#">Home</a></li>
+              	<li class="active"><a href="{{ url_for('main') }}">Home</a></li>
               	<li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>
-              	<li><a href="#">Search</a></li>
+              	<li><a href="{{ url_for('search') }}">Search</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
+            <ul class="nav navbar-nav navbar-right">
+				<li><img src="{{ url_for('static',filename='logo.png')}}" alt="logo" height="50px" width="50px" style=""></li>          
+			</ul>
+      	</div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+</nav>
 
-<body >
-{%if error%}
-<h1>Bad Login, Try again !</h1>
-{%endif%}
+<div class="pic-bg-music" style="padding-bottom: 50px;">
 
+	{%if error%}
+	<h1>Bad Login, Try again !</h1>
+	{%endif%}
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-offset-3 col-md-4">
-			<h1> <b> CoMusic </b> </h1>
-			<h3> Different Thought.<br> Different Sound.<br> Same Music.</h3>
-		</div>
-		<div id="papa">
-			<div class="col-md-offset-1 col-md-1">
-				<img src="{{ url_for('static',filename='logo.png')}}" alt="logo" height="140px" width="140px">
-			</div>
-		</div>
+		<h1 style="font-family: 'Montserrat', sans-serif; font-size: 700%">CoMusic</h1>
+		<h3> Different Thought.<br> Different Sound.<br> Same Music.</h3>
 	</div>
 	<div class="row">
-		<div class="col-md-offset-3 col-md-4">
-
-		<h3>Sign in</h3>
+		<h2 style="font-family: 'Montserrat', sans-serif; font-size: 300%">Sign in</h2>
 	</div>
 </div>
-
 
 <div class="container-fluid" id="tal">
 	<div class="row">
-		<div class="col-md-offset-3 col-md-4">
-			<form action="{{ url_for('main') }}" method="POST">
-				<div class="form-group">
-			       	<label for="email"></label>
-			      	<input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email">
-				
-			    	
-			        <label for="pwd"></label>
-			        <input type="password" class="form-control input-lg" name="password" id="pwd" placeholder="Password">
-			    </div>
-			    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block">
-			</form>
-			<br>
-			<p>don't have an account? sign up for free!</p>
-			<a href="{{ url_for('sign_up') }}" class="btn btn-lg btn-primary btn-block">Sign Up</a>
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+		<form action="{{ url_for('main') }}" method="POST">
+			<div class="form-group">
+		       	<label for="email"></label>
+		      	<input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email"><br>
+		        <label for="pwd"></label>
+		        <input type="password" class="form-control input-lg" name="password" id="pwd" placeholder="Password">
+		    </div>
+		    <input type="submit" name="Submit" value="Sign In" class="btn btn-lg btn-primary btn-block">
+		</form>
+		<br>
+		<p style="font-size: 150%">Don't have an account? sign up for free!</p>
+		<a href="{{ url_for('sign_up') }}" class="btn btn-lg btn-primary btn-block">Sign Up</a>
 		</div>
+		<div class="col-md-4"></div>
 	</div>
+</div>
+
 </div>
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-offset-3 col-md-4">
-			<h3>About Us</h3>
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+			<h3 style="font-family: 'Montserrat', sans-serif;">About Us</h3>
 			<p>
 			We are the team of CoMusic proud to present our webside to you.
 			CoMusic is a new way to get people from other nationalities to get know each other and to pass meaningful experiences togeether through music<br>
@@ -96,7 +96,9 @@
 			Our goal is to start giving people a way to communicate with passion.</p>
 			</p>
 		</div>
+		<div class="col-md-2"></div>
 	</div>
 </div>
+
 </body>
 </html>
